--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+    <script src= "clint.js"></script>
+    <script src= "init.js"></script>
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
-    hej
+    
+    <header class="header">
+
+        <a href="#" class="logo">
+            <img src="css/img/4571bf8e100a1b5253b6dd545e43c77b.jpeg" >
+        </a>
+
+        <nav class="navbar">
+            <a href="/">home</a>
+            <a href="#about">about</a>
+            <a href="/myProduct">Your products</a>
+            <a href="/settings">settings</a>
+            <a href="#review">review</a>
+            <a href="#contact">contact</a>
+        </nav>
+
+        <div class="icons">
+            <div class="fas fa-search" id="search-btn"></div>
+            <div class="fas fa-shopping-cart" id="cart-btn"></div>
+            <div class="fas fa-bars" id="menu-btn"></div>
+        </div>
+
+
+    </header>
+
+    <section class="home" id="home">
+        <div class="content">
+            <h1>
+                PROVISION
+            </h1>
+        </div>
+    </section>
+    <label>Category</label>
+    <select id="category" name="category" required>
+      <option value="all">all</option>
+      <option value="PC">PC</option>
+      <option value="Laptop">Laptop</option>
+      <option value="Hardware">Hardware</option>
+    </select>	
+    <button onclick="getAllProductsWithCategory()" class="regbtn" type="submit" id="submit">Submit</button>
+  <div id="productContainer"></div>
+
+  <button id="logout" onclick="logout()">Logout</button>
+
+
+
 </body>
 </html>
