--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,26 @@
 
   <button id="logout" onclick="logout()">Logout</button>
 
+<script>
+    function logout() {
+        fetch("http://localhost:3000/logout", {
+                method: "POST",
+            })
+            .then((response) => response.text())
+            .then((response) => {
+                if(response) {
+                    location.href = "/login";
+                    window.alert("logged out")
+                }
+            })
+        } 
+    
 
+
+
+
+
+</script>
 
 </body>
 </html>
