--- a/public/register.html
+++ b/public/register.html
@@ -29,7 +29,7 @@
         
         <button type="submit">Register</button>
         <div class="link">
-        <a href="/login.html">Login</a>
+        <a href="/login">Login</a>
         </div>
     </form>
   <script>
