har lavet små ændringer

--- a/public/login.html
+++ b/public/login.html
@@ -24,7 +24,7 @@
             <input type="password" id="password" navn="password" required> 
         
         <button type="submit" >Login</button>
-        <p id="result" class="result"> welcome login</p>
+        <p id="result" class="result"> Velkommen til PROVISION</p>
         <div class="link">
         <a href="/register.html"> Opret konto</a>
         </div>
