--- a/public/newProduct.html
+++ b/public/newProduct.html
@@ -19,12 +19,12 @@
         </a>
 
         <nav class="navbar">
-            <a href="/">home</a>
-            <a href="#about">about</a>
-            <a href="/myProduct">Produkt</a>
-            <a href="/settings">settings</a>
-            <a href="#review">review</a>
-            <a href="#contact">contact</a>
+            <a href="/">Home</a>
+            <a href="#about">About</a>
+            <a href="/myProduct"> Make a product</a>
+            <a href="/settings">Settings</a>
+            <a href="#review">Review</a>
+            <a href="#contact">Contact</a>
         </nav>
 
         <div class="icons">
@@ -99,7 +99,7 @@
           } 
         })
         .catch(() => {
-          window.alert("Cant create product");
+          window.alert("kan ikke lave produktet");
         });
     });
 
