--- a/public/updateProduct.html
+++ b/public/updateProduct.html
@@ -105,19 +105,14 @@
 
     location.href = "/";
 
-    window.alert("Updated product");
+    window.alert("produktet er opdateret");
     } 
     })
     .catch(() => {
-        window.alert("Cant update product");
+        window.alert("kan ikke opdatere produktet");
     });
 })
 
 </script>
-
-
-
-
-
 </body>
 </html>
