de sidste små ændringer

--- a/public/newProduct.html
+++ b/public/newProduct.html
@@ -21,10 +21,10 @@
         <nav class="navbar">
             <a href="/">Home</a>
             <a href="#about">About</a>
-            <a href="/myProduct"> Make a product</a>
+            <a href="/myProduct"> Make a Product</a>
             <a href="/settings">Settings</a>
-            <a href="#review">Review</a>
-            <a href="#contact">Contact</a>
+            <a href="#review">review</a>
+            <a href="#contact">contact</a>
         </nav>
 
         <div class="icons">
@@ -99,7 +99,7 @@
           } 
         })
         .catch(() => {
-          window.alert("kan ikke lave produktet");
+          window.alert("Cant create product");
         });
     });
 
