opgaven er færdig

--- a/public/settings.html
+++ b/public/settings.html
@@ -103,7 +103,7 @@
                 email: email,
                 password: password
             }
-            fetch("http://localhost:3000/updateUser", {
+            fetch("http://localhost:3000/updateBruger", {
                 method: "POST",
                 headers: {
                 "Content-Type": "application/json",
